ecmascript/parser/tests/test262-error-references/fail/733a157cb1896d10.js.stderr
error: Invalid access to super
 --> $DIR/tests/test262-parser/fail/733a157cb1896d10.js:3:15
  |
3 |         (super)();
  |               ^

